# amd_jni

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.gradle  settings.gradle  shell.nix
.github/workflows/: publish.yml
src/main/java/org/teamdeadbolts/amd/: AmdJNI.java
src/main/native/cpp/: amd_jni.cpp  detector.cpp  yolo.cpp
src/main/native/include/: detector.h  org_teamdeadbolts_amd_AmdJNI.h  yolo.h
src/main/native/lib/onnxruntime/: GIT_COMMIT_ID
src/main/native/lib/onnxruntime/lib/: libonnxruntime.so.1
src/main/native/lib/onnxruntime/lib/cmake/onnxruntime/: onnxruntimeTargets-release.cmake
src/main/native/lib/onnxruntime/lib/pkgconfig/: libonnxruntime.pc
src/test/java/org/teamdeadbolts/amd/: AmdJNITest.java
